--- a/compose.yml
+++ b/compose.yml
@@ -9,3 +9,17 @@ services:
     env_file:
       - .env
     command: ["python", "main.py"]
+
+  db:
+    image: postgres:15
+    container_name: deeppick_ai_db
+    restart: always
+    env_file:
+      - .env
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data:
