added build_historik and update compose dev, pgadmin

--- a/compose.yml
+++ b/compose.yml
@@ -21,5 +21,36 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: deeppick_ai_backend
+    env_file:
+      - .env
+    ports:
+      - "5000:5000"
+    depends_on:
+      - db
+
+  dev:
+    build:
+      context: ./development
+      dockerfile: Dockerfile
+    container_name: deeppick_ai_dev
+    env_file:
+      - .env
+
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin4_container
+    restart: always
+    ports:
+      - "8888:80"
+    environment:
+      PGADMIN_DEFAULT_EMAIL: user-name@domain-name.com
+      PGADMIN_DEFAULT_PASSWORD: strong-password
+
+
 volumes:
   postgres_data:
